fix: tweaked spacing issue of card date

--- a/blog-preview-card/index.css
+++ b/blog-preview-card/index.css
@@ -52,7 +52,7 @@ span {
 .card-date {
   font-weight: 500;
   font-size: 14px;
-  margin-block: 12px;
+  margin-bottom: 12px;
 }
 
 h1 {
